# lab-agent

./: .gitignore  Makefile  README.md  config-dual-module-example.yaml  config.yaml  config.yaml.example  env.example  pyproject.toml  test_config.py  test_config_simple.py
scripts/: check_readiness.py
src/lab_agent/: agent.py  common.py  config.py  logging.py  metrics.py  reconciler.py
