[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-agent"
version = "0.1.0"
description = "Lab Platform Device Agent - Edge device communication"
authors = [{name = "Lab Platform Team"}]
requires-python = ">=3.9"
dependencies = [
    "paho-mqtt==1.6.1",
    "PyYAML==6.0.2",
    # Serial communication (for projector module)
    "pyserial==3.5",
    # System monitoring
    "psutil==5.9.6",
    # Testing
    "pytest==7.4.3",
]

[project.scripts]
lab-agent = "lab_agent.agent:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
